--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name='СК "Неометрия"' content='Портал подрядчика СК "Неометрия"' />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,9 +23,12 @@
     -->
     <title>Неометрия</title>
   </head>
-  <body style="width: 100%; height: 100%; position: absolute;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="width: 100%; height: 100%;"></div>
+  <body>
+    <noscript>
+      Вам необходимо включить JavaScript для запуска приложения. You need to
+      enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
